SERVER-24927 Ignore NamespaceNotFound errors during initial sync apply ops